--- a/partials/schedule.html
+++ b/partials/schedule.html
@@ -11,7 +11,7 @@
         </li>
       </ul>
     </span></h3>
-  <div ng-hide="has_content">
+  <div ng-hide="has_content" class="fullscreenCenter" ng-cloak>
     <p>There is currently no data for your selected season.</p>
   </div>
   <div ng-show="has_content">
