--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,10 @@ body {
   margin-bottom: 0px;
 }
 
+.bufferTop {
+  margin-top: 40px;
+}
+
 .item {
   line-height: 1;
   border: 1px  #8585AD solid;
