--- a/css/style.css
+++ b/css/style.css
@@ -304,17 +304,20 @@ div.clear {
 }
 
 .twitter {
-  width: 49.3%;
-  margin: 1px;
-  padding: 3px;
-   padding-top: 0px;
-   padding-left: 0px;
+  display: inline-block;
+  font-family: "Helvetica Neue", Roboto, "Segoe UI", Calibri, sans-serif;
+  font-size: 12px;
+  font-weight: bold;
+  line-height: 16px;
+  border-color: #eee #ddd #bbb;
+  border-radius: 5px;
+  border-style: solid;
+  border-width: 1px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
+  margin: 10px 5px;
+  padding: 0 16px 16px 16px;
+  max-width: 300px;
   float: left;
-  word-wrap: break-word;
-  -webkit-border-bottom-right-radius: 12px;
-  -moz-border-radius-bottomright: 12px;
-  border-bottom-right-radius: 12px;
-  border: 1px solid #e8e8e8;
 }
 .twitter > img.icon {
   float:left;
