--- a/css/style.css
+++ b/css/style.css
@@ -307,7 +307,7 @@ div.clear {
   display: inline-block;
   font-family: "Helvetica Neue", Roboto, "Segoe UI", Calibri, sans-serif;
   font-size: 12px;
-  font-weight: bold;
+
   line-height: 16px;
   border-color: #eee #ddd #bbb;
   border-radius: 5px;
@@ -315,7 +315,7 @@ div.clear {
   border-width: 1px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
   margin: 10px 5px;
-  padding: 0 16px 16px 16px;
+  padding: 5px;
   max-width: 300px;
   float: left;
 }
