--- a/css/style.css
+++ b/css/style.css
@@ -249,13 +249,11 @@ img.arrow {
 }
 
 .tempMax {
-
   font-size: 0.6em;
   text-align: right;
 }
 
 .tempMain {
-
   font-size: 1.7em;
 }
 
@@ -283,16 +281,19 @@ img.arrow {
 .article {
 
 }
+
 div.clear {
   clear: both;
 }
 
 .news {
-  width: 100%;
+  float:left;
+  width: 40%;
   margin: auto;
   margin-top: 5px;
   margin-bottom: 5px;
-  clear: both;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .related {
@@ -307,7 +308,8 @@ div.clear {
   display: inline-block;
   font-family: "Helvetica Neue", Roboto, "Segoe UI", Calibri, sans-serif;
   font-size: 12px;
-
+overflow-wrap: break-word;
+  word-wrap: break-word;
   line-height: 16px;
   border-color: #eee #ddd #bbb;
   border-radius: 5px;
