--- a/partials/driver-view.html
+++ b/partials/driver-view.html
@@ -6,14 +6,66 @@
 </div>
 <div ng-show="content_loaded">
   <table class="table drivertable table-striped table-bordered table-condensed">
-    <tr>
-      <td><h2><span class="lastName">{{driver.familyName}}</span><br/>
-        <span class="firstName">{{driver.givenName}}&nbsp;&nbsp;<img ng-src="{{driver.flagUrl}}" alt="{{driver.nationality}}" /></span></h2></td>
+     <tr><td colspan=2></td></tr>
+     <tr>
+      <td><img class="img-responsive center-block img-thumbnail" ng-src="{{ driver.imageUrl }}" /></td>
+      <td>
+        <table>
+          <tr>
+            <td><h2><span class="lastName">{{driver.familyName}}</span><br/>
+          <span class="firstName">{{driver.givenName}}&nbsp;&nbsp;<img ng-src="{{driver.flagUrl}}" alt="{{driver.nationality}}" /></span></h2></td>
+          </tr>
+          <tr> <td>Driver Number<span class="driverNo">{{driver.permanentNumber}} - {{driver.code}}</span></td></tr>
+          <tr><td>{{driver.Age}} years old .:. {{driver.dateOfBirth | date:'MMM d, y'}}</td></tr>
+        </table>
+      </td>
+     </tr> 
+     <tr><td colspan=2></td></tr>
+     <tr><td colspan=2>
+        <table class="table table-striped table-bordered table-condensed">
+          <tr>
+            
+            <th>Avg Grid</th>
+            <th>Avg Finish Pos</th>
+            <th>Avg Speed</th>
+            <th>Prob finish</th>
+          </tr>
+          <tr>
+            <td>{{avgGrid}}</td>
+            <td>{{avgPos}}</td>
+            <td>{{avgSpeed}}</td>
+            <td></td>
+          </tr>
+        </table>
+      </td>
     </tr>
-    <tr><td><img class="img-responsive center-block img-thumbnail" ng-src="{{ driver.imageUrl }}" /></td></tr>
-    <tr><td>{{driver.Age}} years old .:. {{driver.dateOfBirth | date:'MMM d, y'}}</td></tr>
-    <tr>
-      <td>Driver Number<span class="driverNo">{{driver.permanentNumber}} - {{driver.code}}</span></td>
-    </tr>
+     <tr><td colspan=2></td></tr>
+     <tr><td colspan=2>
+        <table class="table table-striped table-bordered table-condensed">
+          <tr>
+            <th>Season</th>
+            <th>Round</th>
+            <th>Race Name</th>
+            <th>Construstor</th>
+            <th>Grid</th>
+            <th>Position</th>
+            <th>Status</th>
+            <th>Fastest Lap</th>
+            <th>Avg Speed</th>
+          </tr>
+          <tr ng-repeat="race in driverResults.MRData.RaceTable.Races">
+            <td>{{race.season}}</td>
+            <td>{{race.round}}</td>
+            <td>{{race.raceName}}</td>
+            <td>{{race.Results[0].Constructor.name}}</td>
+            <td>{{race.Results[0].grid}}</td>
+            <td>{{race.Results[0].position}}</td>
+            <td>{{race.Results[0].status}}</td>
+            <td>{{race.Results[0].FastestLap.lap}}</td>
+            <td>{{race.Results[0].FastestLap.AverageSpeed.speed}} {{race.Results[0].FastestLap.AverageSpeed.units}}</td>
+          </tr>
+        </table>
+     </td></tr>
+     <tr><td colspan=2></td></tr>
   </table>
 </div>
