starting to build driver stats

--- a/partials/driver-view.html
+++ b/partials/driver-view.html
@@ -34,7 +34,7 @@
             <td>{{avgGrid}}</td>
             <td>{{avgPos}}</td>
             <td>{{avgSpeed}}</td>
-            <td></td>
+            <td>{{probFinish}}</td>
           </tr>
         </table>
       </td>
