--- a/partials/constructor-view.html
+++ b/partials/constructor-view.html
@@ -21,10 +21,10 @@
   <div ng-hide="chartLoaded">
     <img width="300px" src="./images/loading.gif">
   </div>
-  <canvas id="bar" class="chart chart-bar" data="chartData"
-    labels="chartLabels" chart-legend="true" series="chartSeries" options="chartOptions"
-    click="onClick">
-  </canvas> 
+  <canvas id="bar" class="chart chart-bar" chart-data="chartData"
+      chart-labels="chartLabels" chart-legend="true" chart-series="chartSeries" options="chartOptions"
+      chart-click="onClick">
+    </canvas> 
   <div ng-show="content_loaded">
     <table class="table constructortable table-striped table-bordered table-condensed">
       <tr>
