--- a/partials/constructors.html
+++ b/partials/constructors.html
@@ -15,10 +15,10 @@
     <p>There is currently no data for your selected season.</p>
   </div>
   <div ng-show="has_content">
-    <canvas id="bar" class="chart chart-bar" data="chartData"
-      labels="chartLabels" series="chartSeries" options="chartOptions"
-      click="onClick">
-    </canvas>
+    <canvas id="bar" class="chart chart-bar" chart-data="chartData"
+      chart-labels="chartLabels" chart-legend="true" chart-series="chartSeries" options="chartOptions"
+      chart-click="onClick">
+    </canvas> 
     <table class="table table-striped table-bordered table-condensed">
       <tr>
         <th>Pos.</th><td>1st</td><td>2nd</td><td>3rd</td><td>4th</td><td>5th</td><td>6th</td><td>7th</td><td>8th</td><td>9th</td><td>10th</td>
